<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size"
        android:layout_gravity="center_horizontal"
        android:text="@string/text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:layout_marginTop="25dp">

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:theme="@style/ButtonTheme"
        android:text="@string/button1"
        android:onClick="onClick"
        android:id="@+id/spotify_button"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:theme="@style/ButtonTheme"
            android:text="@string/button2"
            android:onClick="onClick"
            android:id="@+id/scores_button"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:theme="@style/ButtonTheme"
            android:text="@string/button3"
            android:onClick="onClick"
            android:id="@+id/library_button"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:theme="@style/ButtonTheme"
            android:text="@string/button4"
            android:onClick="onClick"
            android:id="@+id/bigeer_button"/>

        <Button
            android:theme="@style/ButtonTheme"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/button5"
            android:onClick="onClick"
            android:id="@+id/xyz_button"/>

        <Button
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="@string/button6"
            android:theme="@style/CapstoneTheme"
            android:onClick="onClick"
            android:id="@+id/capstone_button"/>

        </LinearLayout>

</LinearLayout>
</ScrollView>